--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# email
+/.react-email
+
+# prisma
+**/*/migrations
+
 # dependencies
 /node_modules
 /.pnp
