--- a/package.json
+++ b/package.json
@@ -1,25 +1,58 @@
 {
-  "name": "soon",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
-    "postcss": "8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.3"
-  }
+    "name": "soon",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "email": "email dev"
+    },
+    "dependencies": {
+        "@prisma/client": "^4.12.0",
+        "@radix-ui/react-alert-dialog": "^1.0.3",
+        "@radix-ui/react-toast": "^1.1.3",
+        "@react-email/button": "0.0.8",
+        "@react-email/container": "0.0.8",
+        "@react-email/hr": "0.0.5",
+        "@react-email/html": "0.0.4",
+        "@react-email/img": "0.0.5",
+        "@react-email/link": "0.0.5",
+        "@react-email/preview": "0.0.6",
+        "@react-email/section": "0.0.9",
+        "@react-email/text": "0.0.5",
+        "@types/node": "18.15.11",
+        "@upstash/ratelimit": "^0.4.1",
+        "@upstash/redis": "^1.20.2",
+        "class-variance-authority": "^0.5.1",
+        "clsx": "^1.2.1",
+        "eslint": "8.37.0",
+        "eslint-config-next": "13.3.0",
+        "lucide-react": "^0.130.1",
+        "next": "13.3.0",
+        "prisma": "^4.12.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-email": "1.9.1",
+        "react-hook-form": "^7.43.9",
+        "resend": "^0.13.0",
+        "tailwind-merge": "^1.12.0",
+        "tailwindcss-animate": "^1.0.5",
+        "typescript": "5.0.3",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@types/react": "18.0.33",
+        "@types/react-dom": "18.0.11",
+        "@types/uuid": "^9.0.1",
+        "autoprefixer": "10.4.14",
+        "dotenv": "^16.0.3",
+        "eslint-plugin-tailwindcss": "^3.11.0",
+        "postcss": "8.4.21",
+        "prettier": "^2.8.7",
+        "prettier-plugin-organize-imports": "^3.2.2",
+        "prettier-plugin-tailwindcss": "^0.2.7",
+        "tailwindcss": "3.3.1"
+    }
 }
