--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@react-email/section": "0.0.9",
         "@react-email/text": "0.0.5",
         "@types/node": "18.15.11",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@upstash/ratelimit": "^0.4.1",
         "@upstash/redis": "^1.20.2",
         "class-variance-authority": "^0.5.1",
