fix(ci): generate prisma client in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,8 @@ jobs:
             - name: Install dependencies
               run: pnpm install
 
+            - name: Generate Prisma client
+              run: pnpm dlx prisma generate
+
             - name: Build and lint the project
               run: pnpm build
